--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -59,6 +59,9 @@
                     right: 14px;
                     top: 11px;
                 }
+                .succes-border {
+                    border: 1px solid #70E61C;
+                }
             }
             input, textarea {
                 font-family: 'Poppins';
