--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -20,6 +20,7 @@
                     contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent"
                     [class.succes-border]="contactForm.get('name')?.valid">
                 <label>Your name</label>
+                <p *ngIf="contactForm.get('name')?.valid" class="error-box"></p>
                 <p *ngIf="
                     contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent" 
                     class="error-text">Your name is required
@@ -39,6 +40,7 @@
                     (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)"
                     [class.succes-border]="contactForm.get('email')?.valid">
                 <label>Your email</label>
+                <p *ngIf="contactForm.get('email')?.valid" class="error-box"></p>
                 <p *ngIf="
                     (contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
                     (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
@@ -61,6 +63,7 @@
                     [class.succes-border]="contactForm.get('message')?.valid">
                 </textarea>
                 <label>Your message</label>
+                <p *ngIf="contactForm.get('message')?.valid" class="error-box"></p>
                 <p *ngIf="
                     (contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
                     (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)" 
