--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -62,6 +62,13 @@
                 .succes-border {
                     border: 1px solid #70E61C;
                 }
+                .success-label {
+                    color: #70E61C;
+                }
+                .error-box {
+                    height: 35px;
+                    margin: 0;
+                }
             }
             input, textarea {
                 font-family: 'Poppins';
@@ -103,6 +110,9 @@
                 top: 0;
                 transform: translateY(-50%) scale(.9);
                 color: #9747FF;
+            }
+            input:not(:placeholder-shown)[required] + label[required] {
+                color: #E61C40;
             }
             input:not(:placeholder-shown):hover + label, textarea:not(:placeholder-shown):hover + label {
                 color: #1CDAE6;
