start edit position element by scroll

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<div class="about-me-content">
+<div class="about-me-content" #myaboutme>
     <div class="content-left">
         <div id="aboutMe" class="header-about-me-content">About Me</div>
         <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
