--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-container">
+<div class="portfolio-container" #myportfolio>
     <div class="headline-portfolio">
         <img src="assets/img/line-left-portfolio.png">
         <div id="portfolio">Portfolio</div>
