--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -16,6 +16,7 @@
 
 .portfolio-container {
     position: relative;
+    margin-bottom: 100px;
     .headline-portfolio {
         margin-top: 200px;
         display: flex;
