--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact" id="contact">
+<div class="contact" id="contact" #mycontact>
     <img src="assets/img/line-contact.png">
     <div>Contact</div>
 </div>
