--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,9 @@ body {
     --white: #FFFFFF;
     --background: #141D2F;
     --purple: #9747FF;
+    --red: #E61C40;
+    --green: #70E61C;
+    --turquoise: #1CDAE6;
 }
 
 
