--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -4,7 +4,7 @@
     div {
         font-family: 'Poppins bold';
         font-size: 90px;
-        color: #FFFFFF;
+        color: var(--white)
     }
     img {
         height: 4px;
@@ -18,7 +18,7 @@
     padding-left: 115px;
     padding-right: 100px;
     .content-left {
-        color: #FFFFFF;
+        color: var(--white);
         width: 473px;
         div:nth-child(1) {
             font-size: 32px;
@@ -43,14 +43,14 @@
                 position: relative;
                 .error-text {
                     font-size: 12px;
-                    color: #E61C40;
+                    color: var(--red);
                     margin: 1px 0 10px 5px;
                 }
                 .error-border {
-                    border: 1px solid #E61C40;
+                    border: 1px solid var(--red);
                 }
                 .error-label {
-                    color: #E61C40;
+                    color: var(--red);
                 }
                 img {
                     position: absolute;
@@ -58,10 +58,10 @@
                     top: 11px;
                 }
                 .succes-border {
-                    border: 1px solid #70E61C;
+                    border: 1px solid var(--green);
                 }
                 .success-label {
-                    color: #70E61C;
+                    color: var(--green);
                 }
                 .error-box {
                     height: 28px;
@@ -73,15 +73,15 @@
                 width: 91.6%;
                 font-size: 16px;
                 outline: none;
-                border: 1px solid #9747FF;
+                border: 1px solid var(--purple);
                 border-radius: 10px;  
                 padding: 15px 25px;
-                color: #FFFFFF;
+                color: var(--white);
                 transition: 0.2s ease-out;
                 background-color: #141D2F;
                 line-height: 17px;
                  &:hover {
-                    border: 1px solid #1CDAE6;
+                    border: 1px solid var(--turquoise);
                 }
             }
             textarea {
@@ -90,30 +90,30 @@
                 margin-bottom: -6px
             }
             input:focus, textarea:focus {
-                border-color: #9747FF;  
+                border-color: var(--purple);  
                 &:hover {
-                    border-color: #1CDAE6;
+                    border-color: var(--turquoise);
                 }
             }
             input:focus + label, textarea:focus + label {
-                color: #9747FF;
+                color: var(--purple);
                 top: 0;
                 transform: translateY(-50%) scale(.9);
-                background-color: #141D2F;
+                background-color: var(--background);
             }
             input:focus:hover + label, textarea:focus:hover + label {
-                color: #1CDAE6;
+                color: var(--turquoise);
             }
             input:not(:placeholder-shown) + label, textarea:not(:placeholder-shown) + label {
                 top: 0;
                 transform: translateY(-50%) scale(.9);
-                color: #9747FF;
+                color: var(--purple);
             }
             input:not(:placeholder-shown)[required] + label[required] {
-                color: #E61C40;
+                color: var(--red);
             }
             input:not(:placeholder-shown):hover + label, textarea:not(:placeholder-shown):hover + label {
-                color: #1CDAE6;
+                color: var(--turquoise);
             } 
             input:-webkit-autofill, input:-webkit-autofill:focus {
                 transition: background-color 600000s 0s, color 600000s 0s;
@@ -127,13 +127,13 @@
                 left: 0;
                 top: 25px;
                 transform: translateY(-50%);
-                color: #FFFFFF;
+                color: var(--white);
                 padding: 0 4.8px;
                 margin: 0 8px;
                 transition: .2s ease-out;
                 transform-origin: left top;
                 pointer-events: none;
-                background-color: #141D2F;
+                background-color: var(--background);
             }
             .button {
                 width: 617px;
@@ -145,14 +145,14 @@
                     border-radius: 10px;
                     font-size: 23px;
                     padding: 15px 30px;
-                    background-color: #00BEE8;
-                    color: #FFFFFF;  
+                    background-color: var(--light-blue);
+                    color: var(--white);  
                     z-index: 1;
                     cursor: pointer;
                     transition: 0.2s ease-in;
                     border: none;
                     &:hover {
-                        background-color: #9747FF;
+                        background-color: var(--purple);
                         width: 261px;
                         height: 68px;
                         transition: 0.2s ease-in;
