hover effect skills icon filter style

--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,9 +1,8 @@
 <div class="my-skills-container" #myskills>
     <div class="skills-icons">
-        <div class="icons" *ngFor="let skill of skills">
-            <img #image src="assets/img/{{ skill.icon }}" ng-mouseover="isHover = true" ng-mouseleave="isHover = false"
-            [ngStyle]="{'{{skill.color_hover}}':isHover}"
-            >
+        <div class="icons" *ngFor="let skill of skills; let i = index">
+            <img #image src="assets/img/{{ skill.icon }}" (mouseenter)="isHover = i" (mouseleave)="isHover = -1"
+            [style.filter]="isHover == i ? skill.color_hover : ''">
             <div>{{ skill.name }}</div>
         </div>
     </div>
