--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -38,7 +38,7 @@
                     (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)"
                     [class.succes-border]="contactForm.get('email')?.valid">
                 <label>Your email</label>
-                <p *ngIf="contactForm.get('email')?.valid && isSubmitted && !emailSent" class="error-box"></p>
+                <p *ngIf="contactForm.get('email')?.valid && isSubmitted" class="error-box"></p>
                 <p *ngIf="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
                     (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
                     class="error-text">Your email is not valid
@@ -70,15 +70,14 @@
             </div>
 
             <div class="button">
-                <button [disabled]="isSubmitted && emailSent" type="submit">Send message :)</button>
+                <button [disabled]="(isSubmitted && emailSent) || (contactForm.invalid && isSubmitted)" type="submit">Send message :)</button>
             </div>
         </form>
 
         <div *ngIf="isSubmitted && emailSent" class="contact-popup">
             <span *ngIf="emailSent">Email successfully sent</span>
             <span *ngIf="!emailSent">Email not sent.<br>Please try again later</span>
-        </div>
-
+        </div> 
     </div>
 </div>
 
