--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -50,6 +50,69 @@ header {
     color: var(--light-blue)!important;
 }
 
+.nav-responsiv {
+    display: none;
+    width: 45px;
+    height: 34px;
+    position: relative;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    span {
+        display: block;
+        position: absolute;
+        height: 4px;
+        width: 100%;
+        background: white;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+        &:nth-child(1) {
+            top: 0px;
+        }
+        &:nth-child(2), &:nth-child(3) {
+            top: 14px;
+        }
+        &:nth-child(4) {
+            top: 28px;
+        }
+    }
+    &.open span {
+        &:nth-child(1) {
+            top: 14px;
+            width: 0%;
+            left: 50%;
+        }
+        &:nth-child(2) {
+            transform: rotate(45deg);
+        }
+        &:nth-child(3) {
+            transform: rotate(-45deg);
+        }
+        &:nth-child(4) {
+            top: 14px;
+            width: 0%;
+            left: 50%;
+        }
+    }
+}
+
+@media (max-width: 710px) {
+    header {
+        padding: 20px 50px; 
+    }
+    nav a {
+        display: none;
+    }
+    .nav-responsiv {
+        display: flex;
+    }
+}
+  
+
+
 
 
 
