--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -35,8 +35,10 @@
         flex-direction: column;
         align-items: center;
         margin-right: 87px;
-        width: 725px;
+       /*  width: 725px; */
         justify-content: space-between;
+        position: absolute;
+        right: 0;
         .info-profile {
             cursor: default;
             display: flex;
@@ -94,7 +96,7 @@
         z-index: -2;
         top: 350px;
         width: 100%;
-        height: 70vh;
+        height: 100%;
     }
 }
 
@@ -209,16 +211,19 @@
         justify-content: space-between;
         width: 680px;
         z-index: 1;
+        position: relative;
         .profile-round {
-            width: 409px;
-            height: 409px;
             border: 4px solid var(--light-blue);
             border-radius: 100%;
-            margin-right: -190px;
+            position: absolute;
+            width: 65%;
+            left: 0;
         }
         .line-profile-round {
-            width: 267px;
             height: 4px;
+            position: absolute;
+            width: 34%;
+            right: 0;
         }
     }
 }
