label by hover and success to green

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -63,7 +63,7 @@
                     border: 1px solid var(--green);
                 }
                 .success-label {
-                    color: var(--green);
+                    color: var(--green) !important;
                 }
                 .error-box {
                     height: 28px;
