--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -36,6 +36,9 @@ header {
             }
         }
     }
+    .nav-responsiv-menu, .close-nav-responsiv-animation {
+        display: none;
+    }
 }
 
 .active::after {
@@ -114,6 +117,57 @@ header {
         img {
             width: 60px;
             height: 60px;
+        }
+        .nav-responsiv-menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            right: 0px;
+            width: 100%;
+            height: 100vh;
+            z-index: -1;
+            background-color: var(--background);
+            animation: openMenu .3s linear;
+            a {
+                color: white;
+                text-decoration: none;
+                font-size: 2rem;
+                margin: 2rem 0;
+            }
+        }
+        .close-nav-responsiv-animation {
+            /* display: flex; */
+            position: absolute;
+            bottom: 0px;
+            top: 79px;
+            left: 0px;
+            right: -100%;
+            width: 100%;
+            height: 100vh;
+            background-color: var(--background);
+            animation: closeMenu .3s linear;
+        }
+    }
+
+    @keyframes openMenu {
+        from {
+          transform: translateX(100%);
+        }
+        to {
+          transform: translateX(0%);
+        }
+    }
+
+    @keyframes closeMenu {
+        from {
+          transform: translateX(0%);
+        }
+        to {
+          transform: translateX(100%);
         }
     }
 }
