--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,14 +2,14 @@
     <img (click)="scroll('header')" routerLink="/" src="{{ is.logo }}">
 
     <nav [class.nav-responsiv-menu]="navResponsiv.classList.contains('open')">
-        <a (click)="scroll('aboutMe')" routerLink="/aboutMe" routerLinkActive="active" [ngClass]="{'active': currentActive === 1}">About me</a>
-        <a (click)="scroll('skills')" routerLink="/skills" routerLinkActive="active" [ngClass]="{'active': currentActive === 2}">Skills</a>
-        <a (click)="scroll('portfolio')" routerLink="/portfolio" routerLinkActive="active" [ngClass]="{'active': currentActive === 3}">Portfolio</a>
-        <a (click)="scroll('contact')" routerLink="/contact" routerLinkActive="active" [ngClass]="{'active': currentActive === 4}">Contact
+        <a (click)="scroll('aboutMe')" routerLink="/aboutMe" routerLinkActive="active" [ngClass]="{'active': currentActive === 1}" (click)="closeMenu()">About me</a>
+        <a (click)="scroll('skills')" routerLink="/skills" routerLinkActive="active" [ngClass]="{'active': currentActive === 2}" (click)="closeMenu()">Skills</a>
+        <a (click)="scroll('portfolio')" routerLink="/portfolio" routerLinkActive="active" [ngClass]="{'active': currentActive === 3}" (click)="closeMenu()">Portfolio</a>
+        <a (click)="scroll('contact')" routerLink="/contact" routerLinkActive="active" [ngClass]="{'active': currentActive === 4}" (click)="closeMenu()">Contact
         </a>
     </nav>
 
-    <div (click)="navResponsiv.classList.toggle('open')" class="nav-responsiv" #navResponsiv>
+    <div (click)="navResponsiv.classList.toggle('open'); toggleBodyScroll()" class="nav-responsiv" #navResponsiv>
         <span></span>
         <span></span>
         <span></span>
